mainpack/html/css/style.css
/* ... */
.deebo_fn__cv .cv__header p.quote a{
	text-decoration: none;
	color: var(--text);
	border-bottom: 1px solid;
	line-height: 1;
	display: inline-block;
}
.deebo_fn__cv .cv__header p.quote a:hover{
	color: var(--mc);
}
.cv__header .contact_info{
	margin: 0;
	padding: 0;
	list-style-type: none;
	text-align: left;
	margin-bottom: 25px;
}
.cv__header .contact_info .icon{
	display: block;
	width: 40px;
	height: 40px;
	min-width: 40px;
	background-color: var(--elevated);
	border-radius: 5px;
	margin-right: 5px;
	position: relative;
}
.cv__header .contact_info .fn__svg{
	width: 20px;
	height: 20px;
	display: block;
	color: var(--mc);
	position: absolute;
	left: 50%;
	top: 50%;
	margin: -10px 0 0 -10px;
}
.cv__header .contact_info li{
	padding: 0;
    margin: 0;
    position: relative;
    margin-bottom: 5px;
	display: -webkit-flex;
	display: -moz-flex;
	display: -ms-flex;
	display: -o-flex;
	display: flex;
	align-items: flex-start;
}
.cv__header .contact_info p{
	color: var(--text);
	line-height: 1.4;
	background-color: var(--elevated);
	border-radius: 5px;
	padding: 7px 10px;
	width: 100%;
	min-height: 40px;
	display: -webkit-flex;
	display: -moz-flex;
	display: -ms-flex;
	display: -o-flex;
	display: flex;
	-ms-align-items: center;
	align-items: center;
}
.deebo_fn__cv .social{
	margin: 0;
	padding: 0;
	list-style-type: none;
	display: -webkit-flex;
	display: -moz-flex;
	display: -ms-flex;
	display: -o-flex;
	display: flex;
	-webkit-flex-direction: row;
	-moz-flex-direction: row;
	-ms-flex-direction: row;
	-o-flex-direction: row;
	flex-direction: row;
	flex-wrap: wrap;
	-ms-align-items: center;
	align-items: center;
	margin-left: -5px;
}
.deebo_fn__cv .social li{
	margin: 0;
	padding: 0;
	padding-left: 5px;
	margin-bottom: 5px;
}
.deebo_fn__cv .social a{
	display: block;
	text-decoration: none;
	color: #fff;
	background-color: var(--elevated);
	width: 40px;
	height: 40px;
	position: relative;
	border-radius: 5px;
}
.deebo_fn__cv .social .fn__svg{
	position: absolute;
	width: 16px;
	height: 16px;
	top: 50%;
	left: 50%;
	margin: -8px 0 0 -8px;
}
.deebo_fn__cv .social a:hover{
	background-color: var(--mc);
}
.deebo_fn__cv .cv__content section{
	width: 100%;
	padding: 30px;
	background-color: var(--panel);
	margin-bottom: 30px;
	box-shadow: 0px 3px 4px var(--shadow);
	border-radius: 10px;
	float: left;
	clear: both;
}
.deebo_fn__cv .cv__content section:last-child{
	margin-bottom: 0;
}
.right_bar_overlay{
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background-color: transparent;
	display: block;
	z-index: 20;
	width: 100%;
	float: left;
	opacity: 0;
	visibility: hidden;
	transition: all 0.5s ease;
	cursor: pointer;
}
.rightbar-opened .right_bar_overlay{
	background-color: rgba(0,0,0,0.30);
	opacity: 1;
	visibility: visible;
}
/* light/dark switcher */
.deebo_fn_switcher_wrap{
	position: fixed;
	z-index: 999;
	top: 0;
	right: 70px;
	left: auto;
	width: auto;
}
.deebo_fn_switcher_wrap label{
	display: -webkit-flex;
	display: -moz-flex;
	display: -ms-flex;
	display: -o-flex;
	display: flex;
	-webkit-flex-direction: row;
	-moz-flex-direction: row;
	-ms-flex-direction: row;
	-o-flex-direction: row;
	flex-direction: row;
	-ms-align-items: center;
	align-items: center;
	height: 36px;
	padding: 0 15px;
	margin: 7px 0;
	background-color: var(--panel);
	border-radius: 30px;
	color: var(--muted);
	user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    -webkit-touch-callout: none;
    -o-user-select: none;
    -moz-user-select: none;
	cursor: pointer;
	box-shadow: 0px 3px 4px var(--shadow);
}
.deebo_fn_switcher_wrap .checkbox_wrap{
	position: relative;
    display: block;
    width: 42px;
    height: 24px;
	margin: 0 15px;
}
.deebo_fn_switcher_wrap input{
	opacity: 0 !important;
    position: absolute !important;
    visibility: hidden !important;
    width: 0 !important;
    height: 0 !important;
}
.deebo_fn_switcher_wrap .slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: transparent;
	-webkit-transition: .4s;
	transition: .4s;
	border: 1px solid #aaa;
	margin: 0;
	padding: 0;
}
.deebo_fn_switcher_wrap .slider:before {
	position: absolute;
	content: "";
	height: 18px;
	width: 18px;
	left: 2px;
	bottom: 2px;
	background-color: var(--accent-2);
	-webkit-transition: .4s;
	transition: .4s;
}
.deebo_fn_switcher_wrap input:checked + .slider:before {
	-webkit-transform: translateX(18px);
	-ms-transform: translateX(18px);
	transform: translateX(18px);
}
.deebo_fn_switcher_wrap .slider.round {
	border-radius: 24px;
}
.deebo_fn_switcher_wrap .slider.round:before {
 	border-radius: 50%;
}
/*------------------------------------------------------------------*/
/*	03) Section Hero Header
/*------------------------------------------------------------------*/
.section_header{
	width: 100%;
	float: left;
	background-color: transparent;
	overflow: hidden;
}
.section_header .content{
	padding-top: 200px;
	padding-bottom: 200px;
	display: -webkit-flex;
	display: -moz-flex;
	display: -ms-flex;
	display: -o-flex;
	display: flex;
	-ms-align-items: center;
	align-items: center;
	justify-content: space-between;
	min-height: 90vh;
	min-height: calc(100vh - 160px); /* 50px spacing from top, 50px from bottom of the window & 30px from top, 30px from bottom of the section. Summary 160px */
}
.section_header .left_hero_header{
	width: 475px;
	max-width: 40%;
	padding-right: 80px;
}
.section_header .circle{
	position: relative;
}
.section_header .circle .bg_img{
	position: absolute;
	top: 18px;
	left: 18px;
	bottom: 18px;
	right: 18px;
	display: block;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center center;
	z-index: 15;
	border-radius: 100%;
}
.section_header .circle img{
	position: relative;
	display: block;
	min-width: 100%;
	border-radius: 100%;
	z-index: 15;
	opacity: 0;
}
/* ... */

